fixed overflow scrolling

--- a/src/design/_styles.scss
+++ b/src/design/_styles.scss
@@ -39,7 +39,7 @@
 
  .align-items-center { align-items: center; }
 
- .overflow-scroll { overflow: scroll; }
+ .overflow-auto { overflow: auto; }
 
  .flex-wrap { flex-wrap: wrap; }
  .flex-column { flex-direction: column; }
